[29.October 2008]
- transporter.rb, monsters/lift.rb: Fixed "lift down problem":
  Transporter#update_transported_sprites divided into two methods,
  because Transporters, which move transported sprites also in y-axis,
  have to move themselves between updating list of transported sprites
  and moving them in order to ensure that area to which transported sprites 
  are moved is already free at the time of the operation
- added testing level using Tiled map with tiles 32x32 px (works well without
  any additional modifications to SchwerEngine)

[28.October 2008]
- level Stairs to Hell: y coordinate of all objects fixed
- game.rb: fixed error at end of world (throw inside Thread caused 
           ThreadError);
           possibility to switch off threaded loading
- testing level using multiple tilesets-
  

[19.October 2008]
- levels SwitchPlace & Antarctic Visitors & Peaceful Meadow fixed
- gamestate.rb: added some keys to imitate LV2: INSERT uses item, Z and X
  switch characters, left shift uses viking's 'second ability'
- viking.rb: core of S/F key functions moved from GameState to Viking;
- viking.rb, transporter.rb: viking's rect expanded when looking for active
  objects to activate; Transporter's rect expanded when looking for sprites 
  to transport
- monsters/lift.rb: includes Transporter

[18.October 2008]
- viking.rb: docs RD -> RDoc
- gamestate.rb: Possibility to select viking/item also in other states than
  PlayingGameState
- Location#display_rect
- handling of clicks moved from GameState to Game
- new develmagic feature - in-game checking if a rect is free: click in the
  game screen and drom to define checked rect - or double-click a Sprite
  to check it's rect (includes new "monster" TestRect)
- Viking#descend_onto_ground modified because "map dirty thing problem" 
  has been solved (after cca four years of being ignored)
- freevikings.rb: develmagic accessible only in development version

[16.October 2008]