@@ -1,3 +1,8 @@
+[30.October 2008]
+- bottompanel.rb, game.rb, gamestate.rb: Dragged item is shown during
+  drag&drop item exchange
+- initfv.rb: possibility to switch sound on/off from menu
+
 [29.October 2008]
 - transporter.rb, monsters/lift.rb: Fixed "lift down problem":
   Transporter#update_transported_sprites divided into two methods,
